1。整理项目结构 2.添加自定义空间 3.添加网络下载文件

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
 
-    <com.guduodemo.CustomVideoView
+    <com.guduodemo.widget.CustomVideoView
         android:id="@+id/videoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -17,7 +17,7 @@
         android:visibility="gone"
         android:layout_gravity="center_horizontal|bottom">
 
-        <com.guduodemo.MainRippleView
+        <com.guduodemo.widget.MainRippleView
             android:id="@+id/rippleView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
