--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="color_3f51b5">#3f51b5</color>
+    <color name="color_e6e6e6">#e6e6e6</color>
 </resources>
