--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,25 +11,8 @@
 
 
     <RelativeLayout
-        android:id="@+id/record_layout"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:visibility="gone"
-        android:layout_gravity="center_horizontal|bottom">
-
-        <com.guduodemo.widget.MainRippleView
-            android:id="@+id/rippleView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_record" />
-
-    </RelativeLayout>
-
+        android:id="@+id/control"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
