--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="color_3f51b5">#3f51b5</color>
     <color name="color_e6e6e6">#e6e6e6</color>
+    <color name="white">#ffffff</color>
 </resources>
