--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="color_3f51b5">#3f51b5</color>
     <color name="color_e6e6e6">#e6e6e6</color>
     <color name="white">#ffffff</color>
+    <color name="color_333333">#333333</color>
+    <color name="white50">#7fffffff</color>
+    <color name="trans">#00000000</color>
+    <color name="color_ff9437">#ff9437</color>
 </resources>
