--- a/app/src/main/res/layout/item_guide_step_zero.xml
+++ b/app/src/main/res/layout/item_guide_step_zero.xml
@@ -16,6 +16,6 @@
         android:background="@drawable/selector_white_btn"
         android:padding="0px"
         android:text="@string/start_test"
-        android:textColor="@color/color_333333"
+        android:textColor="@color/color_8667c3"
         android:textSize="16sp" />
 </RelativeLayout>
