--- a/app/src/main/res/layout/item_step_four.xml
+++ b/app/src/main/res/layout/item_step_four.xml
@@ -2,7 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     android:orientation="vertical">
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="120dp"
+        android:background="@drawable/shape_black50_corner90">
+
+
+
+    </RelativeLayout>
 
 
     <LinearLayout
