--- a/app/src/main/res/layout/item_step_four.xml
+++ b/app/src/main/res/layout/item_step_four.xml
@@ -2,22 +2,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
     android:orientation="vertical">
 
 
     <RelativeLayout
+        android:id="@+id/progress_layout"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="120dp"
-        android:background="@drawable/shape_black50_corner90">
+        android:layout_marginTop="100dp"
+        android:background="@drawable/shape_background"
+        android:padding="4dp"
+        android:visibility="gone">
 
+        <View
+            android:id="@+id/current_progress"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/shape_current_progress" />
 
+        <com.singingkungfu.sing.widget.UnitView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </RelativeLayout>
-
 
     <LinearLayout
         android:id="@+id/action_layout"
