--- a/app/src/main/res/layout/item_analyze_voice.xml
+++ b/app/src/main/res/layout/item_analyze_voice.xml
@@ -12,7 +12,16 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="160dp"
-        android:text="我们正在为您的声音做分析20%"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="130dp"
+        android:text="@string/analyze_voice"
         android:textColor="@color/white"
         android:textSize="14sp" />
 
