--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -5,6 +5,11 @@
     android:orientation="vertical">
 
 
+    <com.singingkungfu.sing.widget.CustomVideoView
+        android:id="@+id/videoView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <TextView
         android:id="@+id/download_progress_tv"
         android:layout_width="wrap_content"
@@ -13,5 +18,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="60dp"
         android:textColor="@color/white" />
+
+
+    <ImageView
+        android:id="@+id/close_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:src="@drawable/ic_close" />
 
 </RelativeLayout>
