--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,10 @@
 
     <ImageView
         android:id="@+id/back_iv"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/ic_back"
-        android:visibility="gone" />
+        android:src="@drawable/ic_back" />
 
 </FrameLayout>
