--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="color_8667c3">#8667c3</color>
     <color name="color_51d193">#51d193</color>
     <color name="color_8cdf85">#8cdf85</color>
+    <color name="color_8159f3">#8159f3</color>
+    <color name="color_8159F3">#8159F3</color>
+    <color name="color_321862">#321862</color>
 
 
     <color name="pickerview_timebtn_nor">#057dff</color>
