1.修改任务，加入静音检测

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,11 @@
     <color name="color_8cdf85">#8cdf85</color>
     <color name="color_8159f3">#8159f3</color>
     <color name="color_6f43e2">#6f43e2</color>
+    <color name="color_f67353">#f67353</color>
+    <color name="color_4fc8ec">#4fc8ec</color>
+    <color name="color_1ebe80">#1ebe80</color>
+    <color name="color_7f33bad2">#7f33bad2</color>
+    <color name="color_8ce183">#8ce183</color>
 
 
     <color name="pickerview_timebtn_nor">#057dff</color>
