1.修改任务，加入静音检测

--- a/app/src/main/res/layout/item_step_four.xml
+++ b/app/src/main/res/layout/item_step_four.xml
@@ -62,7 +62,7 @@
             android:background="@drawable/selector_white_btn"
             android:padding="0px"
             android:text="@string/next"
-            android:textColor="@color/color_8667c3"
+            android:textColor="@color/color_4fc8ec"
             android:textSize="14sp" />
     </LinearLayout>
 
