--- a/app/src/main/res/drawable/shape_background.xml
+++ b/app/src/main/res/drawable/shape_background.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="90dp" />
-    <solid android:color="@color/color_7f33bad2" />
+    <solid android:color="@color/color_b233bad2" />
 
 </shape>
