1.添加分享代码

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="color_f67353">#f67353</color>
     <color name="color_4fc8ec">#4fc8ec</color>
     <color name="color_1ebe80">#1ebe80</color>
-    <color name="color_b233bad2">#b233bad2</color>
+    <color name="color_e533bad2">#e533bad2</color>
     <color name="color_8ce183">#8ce183</color>
 
 
