--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <color name="color_1ebe80">#1ebe80</color>
     <color name="color_e533bad2">#e533bad2</color>
     <color name="color_8ce183">#8ce183</color>
+    <color name="color_858585">#858585</color>
+    <color name="color_8152f7">#8152f7</color>
 
 
     <color name="pickerview_timebtn_nor">#057dff</color>
